Added form clear and popup

--- a/index.html
+++ b/index.html
@@ -121,27 +121,27 @@
         <section>
           <h2>Contact</h2>
           <div id="wrapper">
-          <form id="contact-form">
-            <label>
-              <span>Full Name</span>
-              <input class="form-control" id="name" type="text" required="">
-            </label>
-            <label>
-              <span>Email</span>
-              <input class="form-control" id="email" type="email" required="">
-            </label>
-            <label>
-              <span>Subject</span>
-              <input class="form-control" id="subject" type="text">
-            </label>
-            <label>
-              <span>Your message</span>
-              <textarea class="form-control" id="message"></textarea>
-            </label>
-            <label>
-              <input id="submit" type="submit" value="Submit"/>
-            </label>
-          </form>
+						<form id="contact-form">
+							<label>
+								<span>Full Name</span>
+								<input class="form-control" id="name" name="name" type="text" value="" required="">
+							</label>
+							<label>
+								<span>Email</span>
+								<input class="form-control" id="email" name="email" type="email" value= "" required="">
+							</label>
+							<label>
+								<span>Subject</span>
+								<input class="form-control" id="subject" name="subject" type="text">
+							</label>
+							<label>
+								<span>Your message</span>
+								<textarea class="form-control" id="message" name="message"></textarea>
+							</label>
+							<label>
+								<input id="submit" type="submit" value="Submit"/>
+							</label>
+						</form>
           
           <div id="contact-details">
             <h3>Get in touch</h3>
